--- a/Lessons/Lesson_6_LevonS/templates/course_list.html
+++ b/Lessons/Lesson_6_LevonS/templates/course_list.html
@@ -20,7 +20,7 @@
             <h1>Список курсов для категории "{{name}}"</h1>
             {% for item in objects_list %}
             <li>
-                {{item.name}} <span><a href="/copy-course/?name={{item.name}}">скопировать</a></span>
+                <a href="/course-details/?id={{item.id}}">{{item.name}}</a>   <span><a href="/copy-course/?name={{item.name}}">скопировать</a></span>
             </li>
             {% endfor %}
         </div>
