--- a/Lessons/Lesson_6_LevonS/templates/inc_sidebar.html
+++ b/Lessons/Lesson_6_LevonS/templates/inc_sidebar.html
@@ -18,7 +18,8 @@
                 <li><a href="/create-category/">Создать новую категорию</a>
                 <li><a href="/category-list/">Список категорий</a></li>
                 <li><a href="/student-list/">Список студентов</a></li>
-                <li><a href="/student-create/">Создать студента</a></li>
+                <li><a href="/create-student/">Создать студента</a></li>
+                <li><a href="/add-student/">Добавить студента на курс</a></li>
             </ul>
         </div>
         <div class="sidebar_base"></div>
