--- a/Lessons/Lesson_6_LevonS/templates/student_list.html
+++ b/Lessons/Lesson_6_LevonS/templates/student_list.html
@@ -6,15 +6,28 @@
 
 {% block body %}
 
-	<a href="/student-create/">Создать студента</a>
-
-    <h1>Список студентов</h1>
-    <div>
-
-        {% for item in objects_list %}
-        <li>
-            {{item.name}}
-        </li>
-        {% endfor %}
-    </div>
+	<div id="content">
+		<!-- insert the page content here -->
+        <div>
+            <li>
+                <a href="/create-student/">Создать студента</a>
+            </li>
+            <li>
+                <a href="/add-student/">Добавить студента на курс</a>
+            </li>
+        </div>
+        <h1>Список студентов</h1>
+        <div>
+    
+            {% for item in objects_list %}
+            <li>
+                Студент - <a href="/student-details/?id={{item.id}}">{{item.name}}</a>
+                ,   записан на курс(ы): 
+                {% for course in item.courses %}
+                {{course.name}}
+                {% endfor %}
+            </li>
+            {% endfor %}
+        </div>
+  	</div>
 {% endblock %}
