--- a/Lessons/Lesson_7_LevonS/templates/base.html
+++ b/Lessons/Lesson_7_LevonS/templates/base.html
@@ -23,7 +23,7 @@
 				<ul id="menu">
 					<!-- put class="selected" in the li tag for the selected page - to highlight which page you're on -->
 					<li class="selected"><a href="/">Home</a></li>
-					<li><a href="/products/">Наши направления</a></li>
+					<li><a href="/category-list/">Наши направления</a></li>
 					<li><a href="/about/">About</a></li>
 					<li><a href="/contact/">Contact</a></li>
 				</ul>
@@ -38,7 +38,7 @@
 		</div>
 		<div id="content_footer"></div>
 		<div id="footer">
-			<p><a href="/">Home</a>| <a href="/products/">Наши направления</a> | <a href="/about/">About</a> | <a href="/contact/">Contact</a></p>
+			<p><a href="/">Home</a>| <a href="/category-list/">Наши направления</a> | <a href="/about/">About</a> | <a href="/contact/">Contact</a></p>
 			<p>Copyright &copy; simplestyle_4 | <a href="http://validator.w3.org/check?uri=referer">HTML5</a> | <a href="http://jigsaw.w3.org/css-validator/check/referer">CSS</a> | <a href="http://www.html5webtemplates.co.uk">design from HTML5webtemplates.co.uk</a></p>
 		</div>
 	</div>
