--- a/Lessons/Lesson_7_LevonS/templates/create_course copy.html
+++ b/Lessons/Lesson_7_LevonS/templates/create_course copy.html
@@ -8,14 +8,14 @@
 	<div id="content">
 		<!-- insert the page content here -->
         <div>
-            <a href="/courses-list/?id={{category.category_id}}">назад</a>
+            <a href="/courses-list/?id={{id}}">назад</a>
         </div>
     
         <br>
         <br>
     
         <div>
-            <h1>Создание курса для категории "{{category.name}}"</h1>
+            <h1>Создание курса для категории "{{name}}"</h1>
             <form method="post">
                 <input type="text" name="name" placeholder="Название">
                 <button type="submit">Сохранить и вернуться к списку курсов</button>
