--- a/Lessons/Lesson_7_LevonS/templates/category_list copy.html
+++ b/Lessons/Lesson_7_LevonS/templates/category_list copy.html
@@ -7,15 +7,14 @@
 {% block body %}
 	<div id="content">
 		<!-- insert the page content here -->
+        <a href="/products/">назад</a>
+
         <div>
-			<a href="/create-category/">Создать новую категорию</a>
-		</div>
-		<div>
 			<h1>Список существующих категорий</h1>
 			{% for item in objects_list %}
 			<li>
-				{{item.name}}
-				
+				{{item.name}}. <span>Количество курсов: {{item.course_count()}}</span>
+				<a href="/courses-list/?id={{item.id}}">Показать курсы</a>
 			</li>
 			{% endfor %}
 		</div>
