--- a/Lessons/Lesson_7_LevonS/templates/course_list copy.html
+++ b/Lessons/Lesson_7_LevonS/templates/course_list copy.html
@@ -8,7 +8,7 @@
 	<div id="content">
 		<!-- insert the page content here -->
         <div>
-            <a href="/category-list/">назад к Категориям</a>
+            <a href="/products/">назад на главную</a>
         </div>
     
         <br>
@@ -17,10 +17,10 @@
         <div>
             <a href="/create-course/?id={{id}}">Создать новый курс</a>
             <br>
-            <h1>Список курсов для категории "{{category.name}}"</h1>
-            {% for item in courses %}
+            <h1>Список курсов для категории "{{name}}"</h1>
+            {% for item in objects_list %}
             <li>
-                <a href="/course-details/?id={{item.course_id}}">{{item.name}}</a>   <span><a href="/copy-course/?name={{item.name}}">скопировать</a></span>
+                <a href="/course-details/?id={{item.id}}">{{item.name}}</a>   <span><a href="/copy-course/?name={{item.name}}">скопировать</a></span>
             </li>
             {% endfor %}
         </div>
