--- a/Lessons/Lesson_7_LevonS/templates/student_details copy.html
+++ b/Lessons/Lesson_7_LevonS/templates/student_details copy.html
@@ -13,10 +13,10 @@
                 <a href="/student-list/">Список студентов</a>
             </li>
         </div>
-        <h1>{{course.name}}</h1>
+        <h1>{{student.name}}</h1>
         <div>
-            На данный курс зачислены студенты:
-            {% for item in my_students %}
+            Записан на курс(ы):
+            {% for item in student.courses %}
             
             <li>
                 {{item.name}}
@@ -24,10 +24,10 @@
             {% endfor %}
         </div>
 
-        <h1>Зачисление студента на курс</h1>
+        <h1>Добавление студента на курс</h1>
         <form method="post">
-            <select size="5" name="student_name">
-                {% for item in students %}
+            <select size="3" name="course_name">
+                {% for item in courses %}
                 <option value="{{item.name}}">{{item.name}}</option>
                 {% endfor %}
             </select>
